--- a/geoskies.html
+++ b/geoskies.html
@@ -8,7 +8,7 @@
     <script src="skiesUtils.js"></script><script src="geoUtils.js"></script>
     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
 </head>
-<body data-spy="scroll" data-target="#myNav" data-offset="70" style="position:relative; padding-top:75px;">
+<body data-spy="scroll" data-target="#myNav" data-offset="70" style="position:relative;">
     <nav id="myNav" class="navbar navbar-light bg-light navbar-expand-md fixed-top">
         <div class="navbar-header">
             <button type="button" class="navbar-toggler mr-sm-2" data-toggle="collapse" data-target="#myNavBar" aria-controls="myNavBar" aria-expanded="false" aria-label="Toggle Navigation">
@@ -29,25 +29,25 @@
                         <a class="dropdown-item" target="_blank" href="http://www.bennettscash.id.au">bennettscash</a>
                 </div></li></ul>
         </div></nav>
-    <div class="container-responsive">
-        <div class="row" id="navMap" style="padding-top:75px;">
-            <div class="col-md-10" id="map">
-
-            </div>
-            <div class="col-md-2" id="mapSensors">
-
+    <div class="container-fluid">
+        <div class="row" id="navMap">
+            <div class="col-md-9" id="map"></div>
+            <div class="col-md-3" id="mapSensors" style="overflow:auto;">
+                <div class="list-group" id="mapSensorList"></div>
             </div>
         </div>
         <div class="container" id="navData">
-
+            <div class="table-responsive">
+                <table id="dataTable" class="table table-bordered table-striped"></table>
+            </div>
         </div>
-        <div class="container" id="navChart" style="padding-top:75px;">
+        <div class="container" id="navChart">
             <div class="row justify-content-center"><h4 class="text-center">Air Quality</h4></div>
             <div class="row mb-3"><canvas id="pmChart"></canvas></div>
             <div class="row justify-content-center"><h4 class="text-center">Temperature &amp; Humidity</h4></div>
             <div class="row mb-3"><canvas id="envChart"></canvas></div>        
         </div>
-        <div class="container" id="navAbout" style="padding-top:75px;">
+        <div class="container" id="navAbout">
             <div class="row text-center"><h3>About</h3></div>
             <div class="row"><p>This page combines the data sources presented in blueSKIES and ozSKIES with a focus on
                 presenting data geospatially.
