Sensor list now transitioning nicely between column and row

--- a/geoskies.html
+++ b/geoskies.html
@@ -35,7 +35,7 @@
             <div class="d-flex w-100 flex-column flex-md-row">
                 <div class="w-100 h-100" id="map"></div>
                 <div id="mapSensors" style="overflow:auto;">
-                    <div class="list-group" id="mapSensorList"></div>
+                    <div class="list-group flex-row flex-md-column" id="mapSensorList"></div>
                 </div>
             </div>
         </div>
