--- a/geoskies.html
+++ b/geoskies.html
@@ -33,7 +33,41 @@
         <div class="row" id="navMap">
             <table id="latestData" class="d-none"></table>
             <div class="d-flex w-100 flex-column flex-md-row">
-                <div class="w-100 h-100" id="map"></div>
+                <div class="d-flex flex-column w-100">
+                    <div class="d-flex flex-row w-100 flex-grow-1" style="background-color: #f8f9fa">
+                        <small>
+                        <div class="form-check form-check-inline">
+                            <label class="form-check-label mr-1" for="hideFaulty">Hide faulty units</label>
+                            <input class="form-check-input" type="checkbox" id="hideFaulty" value="1" checked/>
+                        </div>
+                        Show:
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="show" id="showLatest" value="latest" checked/>
+                            <label class="form-check-label" for="showLatest">Latest data</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="show" id="showHistorical" value="historical"/>
+                            <label class="form-check-label" for="showHistorical">Historical data</label>
+                        </div>
+                        For: 
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="dataSel" id="selected" value="selected"/>
+                            <label class="form-check-label" for="selected">Selected Units</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="dataSel" id="visible" value="visible"/>
+                            <label class="form-check-label" for="visible">Visible Units</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="dataSel" id="all" value="all" checked/>
+                            <label class="form-check-label" for="all">All Units</label>
+                        </div>
+                        <button type="button" class="btn btn-primary btn-sm">Apply</button>
+                        </small>
+                    </div>
+                    <!-- Warning box here -->
+                    <div class="w-100 h-100" id="map"></div>
+                </div>
                 <div id="mapSensors" style="overflow:auto;">
                     <div class="list-group flex-row flex-md-column" id="mapSensorList"></div>
                 </div>
