--- a/geoskies.html
+++ b/geoskies.html
@@ -73,7 +73,11 @@
                             </div>
                             <button type="button" class="btn btn-primary btn-sm">Apply</button>
                         </div></small>
-                        <!-- warning box here -->
+                        <div id="timeWarn" class="alert alert-danger d-none mb-0" role="alert">
+                            <strong>Caution!</strong> Disabling the time filter may result in a very
+                            large amount of data being downloaded from the server. Loading the page
+                            with this setting may take some time.
+                        </div>
                         <div class="w-100 h-100" id="map"></div>
                     </div>
                     <div id="mapSensors" style="overflow:auto;">
