--- a/geoskies.html
+++ b/geoskies.html
@@ -60,15 +60,15 @@
                             </select></div>
                             <div class="mr-1">For:</div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="dataSel" id="selected" value="selected" onclick="displayUnitWarningIfNeeded();"/>
+                                <input class="form-check-input" type="radio" name="dataSel" id="selected" value="selected" onclick="changeSelectedData();"/>
                                 <label class="form-check-label" for="selected">Selected</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="dataSel" id="visible" value="visible" onclick="displayUnitWarningIfNeeded();"/>
+                                <input class="form-check-input" type="radio" name="dataSel" id="visible" value="visible" onclick="changeSelectedData();"/>
                                 <label class="form-check-label" for="visible">Visible</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="dataSel" id="all" value="all" checked onclick="displayUnitWarningIfNeeded();"/>
+                                <input class="form-check-input" type="radio" name="dataSel" id="all" value="all" checked onclick="changeSelectedData();"/>
                                 <label class="form-check-label" for="all">All</label>
                             </div>
                             <button type="button" class="btn btn-primary btn-sm" onclick="reloadData();">Apply</button>
