geoLatest working fine

--- a/geoskies.html
+++ b/geoskies.html
@@ -22,7 +22,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropDown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Other Pages
-                    </a><div class="dropdown-menu" area-labelledBy="navbarDropDown" id="navbarDropLinks" name="navbarDropLinks">
+                    </a><div class="dropdown-menu" aria-labelledBy="navbarDropDown" id="navbarDropLinks" name="navbarDropLinks">
                         <a class="dropdown-item" href="blueskies.pl" target="_blank">blueSKIES</a>
                         <a class="dropdown-item" href="ozsjies.pl" target="_blank">ozSKIES</a>
                         <div class="dropdown-divider"></div>
@@ -115,5 +115,5 @@
             </div>
         </div>
     </div>
-    <script async defer src='https://maps.googleapis.com/maps/api/js?key=APIKEY&libraries=visualization&callback=initMap'></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=APIKEY&libraries=visualization&callback=initMap"></script>
 </body></html>
