--- a/geoskies.html
+++ b/geoskies.html
@@ -173,6 +173,7 @@
             </div>
         </div>
         <div class="container-fluid" id="navData">
+            <button type="button" class="btn btn-info mb-2 float-right" onclick="exportTableCSV('dataTable', 'geoSKIES-sensorData.csv')">Download Data as CSV</button>
             <div class="table-responsive">
                 <table id="dataTable" class="table table-bordered table-striped"></table>
             </div>
