--- a/geoskies.html
+++ b/geoskies.html
@@ -54,7 +54,7 @@
     </style>
 </head>
 <body data-spy="scroll" data-target="#myNav" data-offset="70" style="position:relative;">
-    <div class="row flex-row d-none align-content-center align-items-center justify-content-center loading-overlay" id="loader">
+    <div class="row flex-row d-flex d-none align-content-center align-items-center justify-content-center loading-overlay" id="loader">
         <div class="loader"></div><div style="width: 15%;"></div>
         <h1 class="text-center" style="color: #aaa; letter-spacing: 0.12em;">Loading</h1>
     </div>
