--- a/geoskies.html
+++ b/geoskies.html
@@ -90,6 +90,10 @@
                                 <label class="form-check-label mr-1" for="hideFaulty">Hide&nbsp;faulty</label>
                                 <input class="form-check-input" type="checkbox" id="hideFaulty" value="1" checked/>
                             </div>
+                            <div class="form-check form-check-inline">
+                                <label class="form-check-label mr-1" for="clusterMarkers">Cluster&nbsp;Markers</label>
+                                <input class="form-check-input" type="checkbox" id="clusterMarkers" value="1"  onclick="clusterChange();" checked />
+                            </div>
                             <div class="mr-1">Show:</div>
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="radio" name="show" id="showLatest" value="latest" checked onchange="timeEnableDisable();"/>
@@ -99,10 +103,10 @@
                                 <input class="form-check-input" type="radio" name="show" id="limitTime" value="historical" onchange="timeEnableDisable();"/>
                                 <label class="form-check-label" for="limitTime">Historical</label>
                             </div>
+                        </div><div class="d-flex flex-row w-100 flex-grow-1 justify-content-between px-1 align-items-center" style="background-color: #f8f9fa">
                             <div><select class="custom-select custom-select-sm" id="timeNum" disabled onchange="updateTime();">
                                 <option selected value="1">1</option>
                             </select></div>
-                        </div><div class="d-flex flex-row w-100 flex-grow-1 justify-content-between px-1 align-items-center" style="background-color: #f8f9fa">
                             <div><select class="custom-select custom-select-sm mr-1" id="timeType" disabled onchange="updateMapTimeType();">
                                 <option selected value="hours">Hours</option>
                                 <option value="days">Days</option>
